	not in the current encoding: however the title displayed will
	replace invalid bytes by '?'.

    o	file() and pipe() now open non-ASCII pathnames as Unicode:
	this helps if R is running in a character set different from that
	used by Windows.

    o	help(topic, offline=TRUE) now creates a file called <topic>.tex,
	rather than Rdoc.tex.

    o	The trio library has been updated to version 1.13.




	**************************************************
	*						 *
	*	       2.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.8.1


NEW FEATURES

    o	R_HOME/bin/helpPRINT.bat now contains an example of use with
	MiKTeX to produce a PDF version of the help file.

    o	Rcmd INSTALL has a new option --pkglock to allow a per-package
	lock directory (useful for parallel installs).


BUG FIXES

    o	The windows() device now works around the total clipping of
 	semi-transparent rectangles and circles that extend outside
 	the device region.
 	
    o	The script editor did not respect user preferences for the
	background colour.
	
    o	normalizePath() no longer returns a garbage string when the
    	input is bad; it now signals an error. (PR#13199)
    	
    o	File share/sh/dcf.sh was not distributed with the binary
    	build. (PR#13200)

    o	dir.create() did not print the path correctly in warning messages.

    o	The C-level function consolecmd had been broken in non-Latin-1
	single-byte locales in R 2.8.0 by changes intended to support
	the Japanese IME.  This affected some menu items in Rgui
	(e.g. to source R files with non-Latin-1 names) and submitting
	commands from the script editor, but only in rarer encodings
	such as Central European, Greek and Cyrillic.  (PR#13195,
	probably also PR#13120)

    o	The attempt to make the 'Load' button in the GUI preferences
	start in the home directory failed if the latter was specified
	with forward slashes, and reset the current search directory